add guest folder

--- a/.insomnia/Request/req_48caa3629695472f9c8f7429f09b68d2.yml
+++ b/.insomnia/Request/req_48caa3629695472f9c8f7429f09b68d2.yml
@@ -1,8 +1,8 @@
-_id: req_af4df59ccc0a42959099ad6aa3f155d7
+_id: req_48caa3629695472f9c8f7429f09b68d2
 type: Request
-parentId: wrk_350e03542021473984982e447e3db737
-modified: 1693794277726
-created: 1693492095547
+parentId: fld_6f698abe979a4b0d9b955a2c7873a542
+modified: 1693860406857
+created: 1693860397908
 url: "{{ _.base_url }}"
 name: index
 description: ""
@@ -11,7 +11,7 @@ body: {}
 parameters: []
 headers: []
 authentication: {}
-metaSortKey: -1693794242449.5
+metaSortKey: -1693860397908
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
