--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,33 @@
-version: '3'
-
+version: "3"
 services:
-
-  mysql:
-    container_name: mysql-local
-    image: mysql:5.6.35
-    network_mode: host
-    restart: 'no'
-    tty: true
-    expose:
-      - 3306
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: dbname
-      MYSQL_USER: dbuser
-      MYSQL_PASSWORD: dbpass
-    volumes:
-      - mysql:/var/lib/mysql
-
+  # Serviço do PHP com Apache
   php:
-    container_name: php-local
-    image: php:7.2-apache
-    network_mode: host
     build:
-      context: ./
-      dockerfile: ./Dockerfile
-    expose:
-      - 80
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80" # Mapeia a porta 80 do container para a porta 8080 do host
     volumes:
-      - ./:/var/www/html
+      - .:/var/www/html # Mapeia o diretório do projeto para o diretório do container
 
-volumes:
+  # Serviço do MySQL
   mysql:
-  html:                                  
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "3306:3306" # Mapeia a porta 3306 do container para a porta 3306 do host
+
+  # Serviço do PHPMyAdmin
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      PMA_HOST: mysql
+      PMA_PORT: "3306:3306"
+    ports:
+      - "8081:80" # Mapeia a porta 80 do container do PHPMyAdmin para a porta 8081 do host
+    depends_on:
+      - mysql
