--- a/php/example.env
+++ b/php/example.env
@@ -4,8 +4,9 @@ ADMIN_TOKEN=
 CASHIER_TOKEN=
 
 #Base de dados
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_NAME=
-DATABASE_HOST=
+DATABASE_HOST="mysql"
 DATABASE_URL=
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
