--- a/php/.env
+++ b/php/.env
@@ -4,10 +4,10 @@ ADMIN_TOKEN="admin123"
 CASHIER_TOKEN="cashier123"
 
 #Base de dados
-# DATABASE_HOST="mysql"
-DATABASE_HOST="localhost"
+DATABASE_HOST="mysql"
+# DATABASE_HOST="localhost"
 DATABASE_URL=""
-MYSQL_ROOT_PASSWORD="toor"
+MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=smart_supermarket
 MYSQL_USER=root
 MYSQL_PASSWORD=
