--- a/.insomnia/Request/req_522e5b46c9e84fa89886f7be84537831.yml
+++ b/.insomnia/Request/req_522e5b46c9e84fa89886f7be84537831.yml
@@ -1,7 +1,7 @@
 _id: req_522e5b46c9e84fa89886f7be84537831
 type: Request
 parentId: fld_4f160eaad0e14a6a940dba22dca420b9
-modified: 1693859970494
+modified: 1694490029257
 created: 1693848972126
 url: "{{ _.base_url }}/api/purchases/register"
 name: registra compra
@@ -12,22 +12,24 @@ body:
   text: |-
     {
     	"products_bar_code": [
-    		"222"
+    		"123456789",
+    		"xnxo2lc2023c"
     	]
     }
 parameters: []
 headers:
   - id: pair_f61af8b414694140b98a9785a5c668d2
     name: CLIENT_IP
-    value: 192.168.160.2244
+    value: 192.168.160.224422
     description: ""
     disabled: false
   - name: Content-Type
     value: application/json
+    id: pair_f02218bfb6a744569d7652e3f3d807c9
 authentication:
   type: apikey
   disabled: false
-  key: CASHIER_TOKEN
+  key: CASHIER-TOKEN
   value: cashier123
   addTo: header
 metaSortKey: -1693794244666.7812
