--- a/.insomnia/Request/req_788fad9df04d4f31899ade800354b7dd.yml
+++ b/.insomnia/Request/req_788fad9df04d4f31899ade800354b7dd.yml
@@ -1,17 +1,17 @@
 _id: req_788fad9df04d4f31899ade800354b7dd
 type: Request
 parentId: fld_b4a5e145923a44e48d4358c9f24a6d24
-modified: 1693859981737
+modified: 1694144291481
 created: 1693859940715
-url: "{{ _.api_url }}/products/28/edit"
-name: edita produtos
+url: "{{ _.api_url }}/products/1/edit"
+name: edita produto
 description: ""
-method: PUT
+method: POST
 body:
   mimeType: application/json
   text: |-
     {
-    	"status": "block"
+    	"stock_quantity": "5"
     }
 parameters: []
 headers:
@@ -25,7 +25,7 @@ headers:
 authentication:
   type: apikey
   disabled: false
-  key: admin_token
+  key: admin-token
   value: admin123
   addTo: header
 metaSortKey: -1690849676214.75
