--- a/.insomnia/Request/req_943cbdaf9e1c48f2b602e8ab9244b771.yml
+++ b/.insomnia/Request/req_943cbdaf9e1c48f2b602e8ab9244b771.yml
@@ -1,7 +1,7 @@
 _id: req_943cbdaf9e1c48f2b602e8ab9244b771
 type: Request
 parentId: fld_4f160eaad0e14a6a940dba22dca420b9
-modified: 1693859960798
+modified: 1694355424043
 created: 1693796099248
 url: "{{ _.base_url }}/api/cashiers/me/blocking-status"
 name: verifica o status de bloqueio
@@ -11,14 +11,18 @@ body: {}
 parameters: []
 headers:
   - id: pair_f61af8b414694140b98a9785a5c668d2
-    name: CLIENT_IP
-    value: 192.168.160.2244
+    name: CLIENT-IP
+    value: 192.168.160.22442
     description: ""
     disabled: false
+  - id: pair_ea853f61238c4bd482f46d966adb83dc
+    name: CLIENT-MAC-ADDRESS
+    value: ""
+    description: ""
 authentication:
   type: apikey
   disabled: false
-  key: CASHIER_TOKEN
+  key: CASHIER-TOKEN
   value: cashier123
   addTo: header
 metaSortKey: -1693794246884.0625
