--- a/.insomnia/Request/req_d743e7f16e3b4712adffcc058df36345.yml
+++ b/.insomnia/Request/req_d743e7f16e3b4712adffcc058df36345.yml
@@ -1,31 +1,35 @@
-_id: req_0d74280f53784884b95e265887bcd064
+_id: req_d743e7f16e3b4712adffcc058df36345
 type: Request
 parentId: fld_4f160eaad0e14a6a940dba22dca420b9
-modified: 1694371417360
-created: 1693772462468
-url: "{{ _.base_url }}/api/cashiers/register"
-name: registra caixa
+modified: 1694488753388
+created: 1693867625097
+url: "{{ _.base_url }}/api/purchases/47/pay"
+name: paga compra
 description: ""
 method: POST
-body: {}
+body:
+  mimeType: application/json
+  text: |-
+    {
+    	"payment_method": "credit_card",
+    	"purchaser_name": "MArcos"
+    }
 parameters: []
 headers:
   - id: pair_f61af8b414694140b98a9785a5c668d2
     name: CLIENT_IP
-    value: 192.168.160.224422
+    value: 192.168.160.2244
     description: ""
-    disabled: true
-  - id: pair_d2aa9f2a87e54dc4bebc18fb803a3172
-    name: ""
-    value: ""
-    description: ""
+    disabled: false
+  - name: Content-Type
+    value: application/json
 authentication:
   type: apikey
   disabled: false
   key: CASHIER-TOKEN
   value: cashier123
   addTo: header
-metaSortKey: -1693794251318.625
+metaSortKey: -1692762363671.1406
 isPrivate: false
 settingStoreCookies: true
 settingSendCookies: true
